[package]
name = "rust-options-pricing"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]
description = "High-performance options pricing engine with Black-Scholes, Greeks, and Monte Carlo simulation"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
statrs = "0.17"
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "pricing_benchmark"
harness = false
